Bug 1187696 - Toolbar too bright in Reader dark mode r=Gijs
Differential Revision: https://phabricator.services.mozilla.com/D26331

UltraBlame original commit: 8ab68eea15b8e9585d0dd3ffd7f499b39a808dcb

--- a/toolkit/themes/shared/aboutReader.css
+++ b/toolkit/themes/shared/aboutReader.css
@@ -1,3 +1,152 @@
+:
+root
+{
+-
+-
+close
+-
+button
+-
+hover
+:
+#
+d94141
+;
+}
+body
+{
+-
+-
+toolbar
+-
+bgcolor
+:
+#
+fbfbfb
+;
+-
+-
+toolbar
+-
+border
+:
+#
+b5b5b5
+;
+-
+-
+toolbar
+-
+hover
+:
+#
+ebebeb
+;
+-
+-
+popup
+-
+bgcolor
+:
+#
+fbfbfb
+;
+-
+-
+popup
+-
+border
+:
+#
+b5b5b5
+;
+-
+-
+font
+-
+color
+:
+#
+4c4c4c
+;
+-
+-
+icon
+-
+fill
+:
+#
+808080
+;
+}
+body
+.
+dark
+{
+-
+-
+toolbar
+-
+bgcolor
+:
+#
+2a2a2d
+;
+-
+-
+toolbar
+-
+border
+:
+#
+4B4A50
+;
+-
+-
+toolbar
+-
+hover
+:
+#
+737373
+;
+-
+-
+popup
+-
+bgcolor
+:
+#
+4b4a50
+;
+-
+-
+popup
+-
+border
+:
+#
+65646a
+;
+-
+-
+font
+-
+color
+:
+#
+fff
+;
+-
+-
+icon
+-
+fill
+:
+#
+fff
+;
+}
 body
 {
 padding
@@ -897,8 +1046,14 @@ background
 -
 color
 :
-#
-fbfbfb
+var
+(
+-
+-
+toolbar
+-
+bgcolor
+)
 ;
 -
 moz
@@ -915,8 +1070,14 @@ right
 :
 1px
 solid
-#
-b5b5b5
+var
+(
+-
+-
+toolbar
+-
+border
+)
 ;
 z
 -
@@ -956,8 +1117,14 @@ background
 -
 color
 :
-#
-fbfbfb
+var
+(
+-
+-
+toolbar
+-
+bgcolor
+)
 ;
 height
 :
@@ -966,6 +1133,40 @@ height
 padding
 :
 0
+;
+}
+button
+{
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+color
+:
+var
+(
+-
+-
+font
+-
+color
+)
+;
+fill
+:
+var
+(
+-
+-
+icon
+-
+fill
+)
 ;
 }
 .
@@ -1008,8 +1209,14 @@ right
 :
 1px
 solid
-#
-b5b5b5
+var
+(
+-
+-
+toolbar
+-
+border
+)
 ;
 border
 -
@@ -1017,22 +1224,27 @@ bottom
 :
 1px
 solid
-#
-c1c1c1
+var
+(
+-
+-
+toolbar
+-
+border
+)
 ;
+background
 -
-moz
--
-context
--
-properties
+color
 :
-fill
-;
-fill
-:
-#
-808080
+var
+(
+-
+-
+toolbar
+-
+bgcolor
+)
 ;
 }
 .
@@ -1118,8 +1330,14 @@ background
 -
 color
 :
-#
-fbfbfb
+var
+(
+-
+-
+popup
+-
+bgcolor
+)
 ;
 visibility
 :
@@ -1135,8 +1353,14 @@ border
 :
 1px
 solid
-#
-b5b5b5
+var
+(
+-
+-
+popup
+-
+border
+)
 ;
 border
 -
@@ -1256,6 +1480,38 @@ svg
 display
 :
 block
+;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+stroke
+;
+fill
+:
+var
+(
+-
+-
+popup
+-
+bgcolor
+)
+;
+stroke
+:
+var
+(
+-
+-
+popup
+-
+border
+)
 ;
 }
 .
@@ -1498,8 +1754,14 @@ left
 :
 1px
 solid
-#
-B5B5B5
+var
+(
+-
+-
+popup
+-
+border
+)
 ;
 border
 -
@@ -1507,8 +1769,14 @@ bottom
 :
 1px
 solid
-#
-B5B5B5
+var
+(
+-
+-
+popup
+-
+border
+)
 ;
 }
 .
@@ -1782,11 +2050,6 @@ button
 .
 description
 {
-color
-:
-#
-666
-;
 font
 -
 size
@@ -2073,8 +2336,14 @@ background
 -
 color
 :
-#
-ebebeb
+var
+(
+-
+-
+toolbar
+-
+hover
+)
 ;
 }
 .
@@ -2299,8 +2568,16 @@ background
 -
 color
 :
-#
-d94141
+var
+(
+-
+-
+close
+-
+button
+-
+hover
+)
 ;
 border
 -
@@ -2308,8 +2585,16 @@ bottom
 :
 1px
 solid
-#
-d94141
+var
+(
+-
+-
+close
+-
+button
+-
+hover
+)
 ;
 border
 -
@@ -2317,8 +2602,16 @@ right
 :
 1px
 solid
-#
-d94141
+var
+(
+-
+-
+close
+-
+button
+-
+hover
+)
 ;
 }
 .
