--- a/toolkit/themes/shared/narrate.css
+++ b/toolkit/themes/shared/narrate.css
@@ -228,6 +228,41 @@ color
 #
 e5e5e5
 ;
+-
+-
+current
+-
+voice
+:
+#
+7f7f7f
+;
+}
+.
+dark
+.
+narrate
+-
+dropdown
+{
+-
+-
+border
+-
+color
+:
+#
+65646a
+;
+-
+-
+current
+-
+voice
+:
+#
+a09eac
+;
 }
 .
 narrate
@@ -336,8 +371,14 @@ background
 -
 color
 :
-#
-eaeaea
+var
+(
+-
+-
+toolbar
+-
+hover
+)
 ;
 }
 .
@@ -750,6 +791,26 @@ size
 24px
 auto
 ;
+-
+moz
+-
+context
+-
+properties
+:
+fill
+;
+fill
+:
+var
+(
+-
+-
+icon
+-
+fill
+)
+;
 }
 .
 narrate
@@ -840,6 +901,27 @@ narrate
 rate
 -
 input
+{
+background
+-
+color
+:
+var
+(
+-
+-
+popup
+-
+bgcolor
+)
+;
+}
+.
+narrate
+-
+rate
+-
+input
 :
 :
 -
@@ -853,8 +935,14 @@ background
 -
 color
 :
-#
-979797
+var
+(
+-
+-
+icon
+-
+fill
+)
 ;
 height
 :
@@ -907,8 +995,14 @@ background
 -
 color
 :
-#
-808080
+var
+(
+-
+-
+icon
+-
+fill
+)
 ;
 height
 :
@@ -1196,6 +1290,41 @@ color
 eaeaea
 ;
 }
+body
+.
+dark
+.
+voiceselect
+>
+.
+options
+:
+not
+(
+.
+hovering
+)
+>
+button
+.
+option
+:
+focus
+{
+background
+-
+color
+:
+var
+(
+-
+-
+toolbar
+-
+hover
+)
+;
+}
 .
 voiceselect
 >
@@ -1291,8 +1420,14 @@ voice
 {
 color
 :
-#
-7f7f7f
+var
+(
+-
+-
+current
+-
+voice
+)
 ;
 }
 .
